add google maps embed and run.py script

--- a/index.html
+++ b/index.html
@@ -17,5 +17,18 @@
         </div>
         <script src="index.js"></script>
         <img id="outputImage" hidden>
+        <div id="map">
+            <iframe id="mapFrame"
+              width="600"
+              height="450"
+              style="border:0"
+              loading="lazy"
+              allowfullscreen
+              referrerpolicy="no-referrer-when-downgrade"
+              src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBRBsNfIfOXsxOve3I_vru6Qwwz0kAj8YQ
+                &center=30.2859174,-97.7395459&zoom=16">
+            </iframe>
+        </div>
+
     </body>
 </html>
